# genie

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini  notes.txt  vcpkg.json
.cache/clangd/index/: AlignedBox.h.261E47A5CFAA0246.idx  AmbiVector.h.55F18D1B0EE5782B.idx  Amd.h.30DBA39FBD4C4CC7.idx  AngleAxis.h.ED1706B502B042E4.idx  AngleAxis_mimic_euler.cpp.D44DA57077D3D041.idx  Array.h.F6B70D2EE1E2A0D7.idx  ArrayBase.h.271C3137B12A86D4.idx  ArrayCwiseBinaryOps.h.9DCD52A57C9D1D11.idx  ArrayCwiseUnaryOps.h.EBA82882BCAF4A84.idx  ArrayWrapper.h.9957A4B692E37468.idx  Assign.h.97F57A7AD103A0A6.idx  AssignEvaluator.h.771724AD17F3D7D5.idx  AssignmentFunctors.h.42B7C2FC76144A05.idx  BDCSVD.h.41CA56D63D4B0556.idx  BVH.cpp.451C3CF2D29E2357.idx  BVH_Example.cpp.39638A4F2679AAD8.idx  BandMatrix.h.8294D7A4770A6135.idx  BandTriangularSolver.h.EC04A125DDA3578C.idx  BasicPreconditioners.h.5E98D114F9887652.idx  BenchSparseUtil.h.EE2838F55C0AE29F.idx  BenchTimer.h.6EC211AA5AD605DD.idx  BenchUtil.h.ED395F0F63C92541.idx  BiCGSTAB.h.A60EA8C17A5637FC.idx  BiCGSTAB_simple.cpp.38AA19CCDE1789B2.idx  BiCGSTAB_step_by_step.cpp.0F2C6DB0D5EF45A3.idx  BinaryFunctors.h.C1C38445BAFAD19B.idx  BlasUtil.h.531936AE7FBD9CBA.idx  Block.h.E20BC80AEDEF3FCF.idx  BlockHouseholder.h.EFCB87527E21B94D.idx  BlockMethods.h.C76E34910F0937B7.idx  BooleanRedux.h.A6C902E2800166B1.idx  Cholesky.6365AE97867F7C00.idx  ColPivHouseholderQR.h.51B4F7C677284356.idx  ColPivHouseholderQR_solve.cpp.C2A1C37717E27455.idx  CommaInitializer.h.058E1E55CE7743F7.idx  CommonCwiseBinaryOps.h.C38CB4848C3DE3FF.idx  CommonCwiseUnaryOps.h.558BF9E02F1B4549.idx  CompleteOrthogonalDecomposition.h.D701732B37D35263.idx  Complex.h.194F73A008C42EC8.idx  Complex.h.B9FB04BB70BECEE1.idx  (+1197 more)
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  imgui.ini
include/: example.h
libs/glad/: CMakeLists.txt
libs/glad/.cache/clangd/index/: glad.h.A7D19E8CAA4609BE.idx
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: example.cpp  example.hpp  main.cpp
src/genie/: GenieView.cpp  GenieView.hpp  genieview.cpp
src/graphics/: Content.cpp  Content.hpp  ContentLoader.cpp  ContentLoader.hpp
src/test/: t.cpp  t.h
src/utillities/: TextParsing.cpp  TextParsing.hpp
